# flownetpy

./: .gitignore  LICENSE  README.md  pyproject.toml
src/flownetpy/: __init__.py  api.py  core.py  plotting.py  types.py
tests/: test_smoke.py
