[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "flownetpy"
version = "0.1.0"
description = "Finite difference flownet seepage solver"
authors = [{name = "Ujjwal Marasini, Ashmita Guragain"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["src"]