[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "damflownet"
version = "0.1.3"
description = "Finite-difference flownet seepage solver for dam–foundation problems."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Ujjwal Marasini" },
  { name = "Ashmita Guragain" }
]
dependencies = [
  "numpy>=1.20",
  "matplotlib>=3.5",
]

[tool.setuptools.packages.find]
where = ["src"]